Bug 192977 - After running konsolekalendar, Korganizer does not use birthday resource
Summary: After running konsolekalendar, Korganizer does not use birthday resource
Status: RESOLVED FIXED
Alias: None
Product: korganizer
Classification: Applications
Component: general (other bugs)
Version First Reported In: 4.2.3
Platform: Ubuntu Unspecified
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-05-17 11:33 UTC by Dotan Cohen
Modified: 2009-05-30 19:18 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Dotan Cohen 2009-05-17 11:33:40 UTC
Version:            (using KDE 4.2.3)
Installed from:    Ubuntu Packages

Running konsolekalendar without the --allow-gui option removes the Kaddressbook resource from the Korganizer configuration. I am filing against Korganizer as it is the affected application.

Steps to reproduce:
1) Add kaddressbook resource to Korganizer, so that birthdays and
anniversaries appear in calendar
2) Run this command:
$ konsolekalendar --show-next 7 --export-type html --export-file
/tmp/calendar.html
3) Check to see if Kaddressbook resource has been disabled
Comment 1 Sergio Martins 2009-05-17 13:45:18 UTC
Akonadi resource is gone too
Comment 2 Sergio Martins 2009-05-17 14:05:02 UTC
Do you still have trunk where you can test things?

Index: console/konsolekalendar/stdcalendar.cpp
===================================================================
--- console/konsolekalendar/stdcalendar.cpp     (revision 965416)
+++ console/konsolekalendar/stdcalendar.cpp     (working copy)
@@ -78,7 +78,7 @@
            (*it)->type() == QLatin1String( "localdir" ) ) {
         (*it)->load();
       } else {
-        mManager->remove( *it );
+        mManager->setActive( *it, false );
       }
     }
   }
Comment 3 Dotan Cohen 2009-05-18 09:10:29 UTC
I don't have Trunk, Sergio, this is a production machine.
Comment 4 Allen Winter 2009-05-30 15:39:03 UTC
SVN commit 975509 by winterz:

Do not remove resources, just load them.
Thanks Sergio for providing the fix.

BUG: 192977


 M  +2 -4      stdcalendar.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=975509
Comment 5 Dotan Cohen 2009-05-30 19:18:13 UTC
Thanks!