Do not remove resources, just load them. Thanks Sergio for providing the fix.

BUG: 192977

svn path=/trunk/KDE/kdepim/console/konsolekalendar/; revision=975509